<resources>
    <string name="app_name">VideoMeeting</string>
    <string name="Title">Title</string>
    <string name="Loading">Loading</string>
    <string name="OK">OK</string>
    <string name="ErrorMSG">Something went wrong please try again in a few minutes.</string>
    <string name="Error">Error</string>
    <!-- MainActivity Page -->
    <string name="SignIn">Sign In</string>
    <string name="CreateAccount">Create Account</string>
    <!-- SignIn Page -->
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ForgotPassword" translatable="true">Forgot password? Reset Password</string>
    <string name="CheckEmailVerify">This account not verify yet, please check the link sent to your email to verify this account.</string>
    <string name="EmailNotExist">Email not exist in the system</string>
    <string name="WrongPassword">Wrong Password</string>
    <!-- CreateAccount Page -->
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Finish">Finish</string>
    <string name="Required">Required</string>
    <string name="MinimumChars">Required minimum 6 chars</string>
    <string name="InvalidEmail">Invalid Email</string>
    <string name="InvalidPassword">Invalid Password</string>
    <string name="EmailExist">Email exist in the system</string>
    <string name="CompleteCreateAccount">Successfully registered, Please verify your email with link sent to your email.</string>
    <!-- ResetPassword Page -->
    <string name="ResetPassword">ResetPassword</string>
    <string name="ForgotPasswordInfo" translatable="true">Please enter the email address which you want to reset the password.</string>
    <string name="ResetLink" translatable="true">Reset Link has been send to your Email.</string>
    <!-- Home Page -->
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="History">History</string>
    <string name="SignOut">SignOut</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="EmailCannotBeChanged">Email (cannot be changed)</string>
    <string name="CompleteEditProfile">The profile has been successfully updated</string>
    <string name="UseOfSpaces">Do not use spaces</string>
    <string name="Chats">Chats</string>
    <string name="Camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="TheUser">The User</string>
    <string name="HaveNoImage">Have No Image</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="AreYouSure">Are you sure you want to Sign Out?</string>
    <string name="Status">Status</string>
    <string name="UserImage">User Image</string>
    <string name="Search">Search</string>
    <!-- Message Page -->
    <string name="Message">Message</string>
    <string name="Call">Call</string>
    <string name="VideoCall">Video Call</string>
    <string name="BackIcon">Back Icon</string>
    <!-- OutgoingCall Page -->
    <string name="Calling">Calling</string>
    <string name="Cancel">Cancel</string>
    <string name="VideoCalling">Video Calling</string>
    <!-- IncomingCall Page -->
    <string name="Accept">Accept</string>
    <string name="Reject">Reject</string>
    <!-- Arrays -->
    <string-array name="Main">
        <item>@string/SignIn</item>
        <item>@string/CreateAccount</item>
    </string-array>
</resources>