<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="11dp"
    android:layout_marginRight="11dp"
    android:layout_marginTop="7dp"
    android:layout_marginBottom="7dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/UserImage"
            android:id="@+id/imageViewUser"
            android:layout_width="70dp"
            android:layout_height="0dp"
            android:src="@drawable/person"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:contentDescription="@string/Status"
            android:id="@+id/imageViewStatus"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/offline"
            app:layout_constraintStart_toStartOf="@+id/imageViewUser"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/FirstName"
            android:textColor="@color/default_color"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageViewCall"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewUser"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:contentDescription="@string/Call"
            android:id="@+id/imageViewCall"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageViewVideo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:contentDescription="@string/VideoCall"
            android:id="@+id/imageViewVideo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/videocam"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
