<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_call"
    tools:context=".user.OutgoingCall">

    <TextView
        android:id="@+id/textViewType"
        style="@style/TextView_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewType">

        <ImageView
            android:layout_width="100dp"
            android:layout_gravity="center"
            android:layout_height="100dp"
            android:src="@drawable/person"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="594dp" />

        <TextView
            android:id="@+id/textViewFullName"
            style="@style/TextView_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/FirstName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:padding="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/imageViewButtonCancel"
            android:background="@drawable/reject_background"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/reject" />

        <TextView
            style="@style/TextView_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Cancel" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>